--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js"></script>
     <title></title>
 </head>
 <body onload="loadCatFact()">
