--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <script type="text/javascript" src="jquery\\dist\\jquery.min.js"></script>
-    <title></title>
+    <title>Cats gallery</title>
 </head>
 <body>
     <a name="top"></a>
