--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <script type="text/javascript" src="jquery\\dist\\jquery.min.js"></script>
-    <title></title>
+    <title>Cat-game)</title>
 </head>
 <body onload="loaded()">
     <a name="top"></a>
