--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <metaviewport name ="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="jquery\\dist\\jquery.min.js"></script>
     <title>Catspurration of the day!</title>
 </head>
@@ -22,7 +23,7 @@
             <h2 class="header-content">
                 Random cat fact:
             </h2>
-            <div id="cat-fact">
+            <div id="cat-fact" class="content">
 
             </div>
         </div>
